--- a/proj2/proj2.html
+++ b/proj2/proj2.html
@@ -7,9 +7,13 @@
 
   <body onload="main()">
     <h1>Project #2 (fall,2019) SungBum Um</h1>
-    <canvas id="webgl" width="512" height="512">
+    <canvas id="webgl" width="1024" height="512">
     Please use a browser that supports "canvas"
     </canvas>
+    <table>
+      <tr><td>Longitude</td><td><input type=range id="longitude" min=0 max=360 value=60></td></tr>
+      <tr><td>Latitude</td><td> <input type=range id="latitude" min=-90 max=90 value=30></td></tr>
+    </table>
 
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
