--- a/proj3/proj3.html
+++ b/proj3/proj3.html
@@ -28,18 +28,6 @@
 				<td>height</td>
 				<td><input type=range id="moon-height" min=0 max=360 value=60></td>
 			</tr>
-			<tr>
-				<td>material</td>
-				<td><select id="materials"></select></td>
-			</tr>
-			<tr>
-				<td>shading model</td>
-				<td>
-					<select id="shading-models">
-						<option value="Blinn-Phong" selected>Blinn-Phong</option>
-					</select>
-				</td>
-			</tr>
 		</table>
 		<script id="vert-Blinn-Phong" type="x-shader/x-vertex">#version 300 es
 			layout(location=0) in vec4 aPosition;
@@ -89,36 +77,49 @@
 			uniform TMaterial	material;
 			uniform TLight		light[2];
 			uniform sampler2D	uSampler;
+			uniform bool        shading;
 			void main()
 			{
 				vec3	n = normalize(vNormal);
 				vec3	l;
 				vec3	v = normalize(-vPosEye.xyz);
-				fColor = texture(uSampler, vTexCoord);
+				
+				if (!shading) {
+					fColor = texture(uSampler, vTexCoord);
+					return;
+				}
+
+				TMaterial m;
+				m.diffuse = texture(uSampler, vTexCoord).rgb;
+				m.ambient = material.ambient;
+				m.specular = material.specular;
+				m.shininess = material.shininess;
+
+				fColor = vec4(0.0);
+				for(int i=0 ; i<2 ; i++)
+				{
+					if(light[i].enabled)
+					{
+						if(light[i].position.w == 1.0)
+							l = normalize((light[i].position - vPosEye).xyz);
+						else
+							l = normalize((light[i].position).xyz);
+						vec3	r = reflect(-l, n);
+						float	l_dot_n = max(dot(l, n), 0.0);
+						vec3	ambient = light[i].ambient * m.ambient;
+						vec3	diffuse = light[i].diffuse * m.diffuse * l_dot_n;
+						vec3	specular = vec3(0.0);
+						if(l_dot_n > 0.0)
+						{
+							specular = light[i].specular * m.specular * pow(max(dot(r, v), 0.0), m.shininess);
+						}
+						fColor += vec4(ambient + diffuse + specular, 1);
+					}
+				}
+				fColor.w = 1.0;
 			}
 		</script>
-		<!-- fColor = vec4(0.0);
-		for(int i=0 ; i<2 ; i++)
-		{
-			if(light[i].enabled)
-			{
-				if(light[i].position.w == 1.0)
-					l = normalize((light[i].position - vPosEye).xyz);		// positional light
-				else
-					l = normalize((light[i].position).xyz);	// directional light
-				float	l_dot_n = max(dot(l, n), 0.0);
-				vec3	ambient = light[i].ambient * material.ambient;
-				vec3	diffuse = light[i].diffuse * material.diffuse * l_dot_n;
-				vec3	specular = vec3(0.0);
-				if(l_dot_n > 0.0)
-				{
-					vec3	h = normalize(l + v);
-					specular = light[i].specular * material.specular * pow(max(dot(h, n), 0.0), material.shininess);
-				}
-				fColor += vec4(ambient + diffuse + specular, 1);
-			}
-		}
-		fColor.w = 1.0; -->
+		
 
 		<script src="../lib/webgl-utils.js"></script>
 		<script src="../lib/webgl-debug.js"></script>
