--- a/proj3/proj3.html
+++ b/proj3/proj3.html
@@ -36,20 +36,27 @@
             uniform mat4	MVP;
             uniform mat4	MV;
             uniform mat4	matNormal;
+            uniform float	disp_scale;
+            uniform float	disp_bias;
+            uniform sampler2D tex_disp;
+            uniform bool        shading;
             out vec3	vNormal;
             out vec4	vPosEye;
             out vec2	vTexCoord;
             void main()
             {
                 vPosEye = MV*aPosition;
+                float	disp = texture(tex_disp, aTexCoord).r;
+                vec4	p = aPosition;
+                p += (0.5*disp + disp_bias)*vec4(aNormal, 0);
                 vNormal = normalize(mat3(matNormal)*aNormal);
-                gl_Position = MVP*aPosition;
+                gl_Position = (shading) ? MVP*p : MVP*aPosition;
                 vTexCoord = aTexCoord;
             }
         </script>
         <!-- vTexCoord는 TextureCoordinate 즉 이미지 좌표계에서 이미지를 분할한 조각을 나타내는 좌표.
-            image data는 texture unit을 통해 접근하게 되며, uSampler로 texture unit id를 지정.
-            그래서 texture(uSampler, vTexCoord) 가 된다. -->
+            image data는 texture unit을 통해 접근하게 되며, tex_color로 texture unit id를 지정.
+            그래서 texture(tex_color, vTexCoord) 가 된다. -->
         <script id="frag-Blinn-Phong" type="x-shader/x-fragment">#version 300 es
             #ifdef GL_ES
             precision mediump float;
@@ -74,23 +81,25 @@
                 vec3	specular;
                 bool	enabled;
             };
-            uniform TMaterial	material;
-            uniform TLight		light[2];
-            uniform sampler2D	uSampler;
+            uniform TMaterial   material;
+            uniform TLight      light[2];
+            uniform sampler2D   tex_color;
+            uniform sampler2D   tex_normal;
             uniform bool        shading;
+
             void main()
             {
-                vec3	n = normalize(vNormal);
-                vec3	l;
-                vec3	v = normalize(-vPosEye.xyz);
-                
                 if (!shading) {
-                    fColor = texture(uSampler, vTexCoord);
+                    fColor = texture(tex_color, vTexCoord);
                     return;
                 }
 
+                vec3 n = normalize(vNormal);
+                vec3 l;
+                vec3 v = normalize(-vPosEye.xyz);
+
                 TMaterial m;
-                m.diffuse = texture(uSampler, vTexCoord).rgb;
+                m.diffuse = texture(tex_color, vTexCoord).rgb;
                 m.ambient = material.ambient;
                 m.specular = material.specular;
                 m.shininess = material.shininess;
