--- a/proj3/proj3.html
+++ b/proj3/proj3.html
@@ -24,9 +24,9 @@
             </tr>
             <tr>
                 <td>height</td>
-                <td><input type=range id="earth-height" min=0 max=360 value=60></td>
+                <td><input type=range id="earth-height" min=0 max=100 value=20></td>
                 <td>height</td>
-                <td><input type=range id="moon-height" min=0 max=360 value=60></td>
+                <td><input type=range id="moon-height" min=0 max=100 value=20></td>
             </tr>
         </table>
         <script id="vert-Blinn-Phong" type="x-shader/x-vertex">#version 300 es
@@ -48,7 +48,7 @@
                 vPosEye = MV*aPosition;
                 float	disp = texture(tex_disp, aTexCoord).r;
                 vec4	p = aPosition;
-                p += (0.5*disp + disp_bias)*vec4(aNormal, 0);
+                p += (disp_scale*disp + disp_bias)*vec4(aNormal, 0);
                 vNormal = normalize(mat3(matNormal)*aNormal);
                 gl_Position = (shading) ? MVP*p : MVP*aPosition;
                 vTexCoord = aTexCoord;
