[#2] 지구에 specular mapping 추가
대륙인 부분은 빛이 반사되지 않고(하얀색 반사빛이 대륙에서는 사라짐), 바다인 부분만 반사됨

--- a/proj3/proj3.html
+++ b/proj3/proj3.html
@@ -85,7 +85,9 @@
             uniform TLight      light[2];
             uniform sampler2D   tex_color;
             uniform sampler2D   tex_normal;
+            uniform sampler2D   tex_specular;
             uniform bool        shading;
+            uniform bool        specular_map;
 
             void main()
             {
@@ -101,7 +103,12 @@
                 TMaterial m;
                 m.diffuse = texture(tex_color, vTexCoord).rgb;
                 m.ambient = material.ambient;
-                m.specular = material.specular;
+                if (specular_map) {
+                    m.specular = texture(tex_specular, vTexCoord).rgb;
+                }
+                else {
+                    m.specular = material.specular;
+                }
                 m.shininess = material.shininess;
 
                 fColor = vec4(0.0);
