--- a/proj3/proj3.html
+++ b/proj3/proj3.html
@@ -141,12 +141,12 @@
         <script src="../lib/webgl-debug.js"></script>
         <script src="../lib/cuon-utils.js"></script>
         <script src="../lib/cuon-matrix.js"></script>
-        <script src="class_material.js"></script>
-        <script src="class_shader.js"></script>
-        <script src="class_light.js"></script>
-        <script src="class_mesh.js"></script>
-        <script src="class_axes.js"></script>
-        <script src="create_mesh_sphere.js"></script>
+        <!-- <script src="class_material.js"></script> -->
+        <!-- <script src="class_shader.js"></script> -->
+        <!-- <script src="class_light.js"></script> -->
+        <!-- <script src="class_mesh.js"></script> -->
+        <!-- <script src="class_axes.js"></script> -->
+        <!-- <script src="create_mesh_sphere.js"></script> -->
         <script src="proj3.js"></script>
     </body>
 </html>
